fix: ApplicationForm text align

--- a/src/components/business/forms/ApplicationForm/ApplicationForm.module.css
+++ b/src/components/business/forms/ApplicationForm/ApplicationForm.module.css
@@ -6,6 +6,7 @@
 }
 
 .title {
+  text-align: center;
   line-height: 1;
   margin-bottom: 1rem;
 }
